2005-11-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Interp.java (eval): When
        passing a pure Tcl list to eval, skip the
        parsing step and just invoke evalObjv()
        directly. This provides a significant
        performance improvement and works like the
        C version of Tcl.
        * src/jacl/tcl/lang/Namespace.java
        (resetShadowedCmdRefs): Optimize the common
        case of a command in the global namespace
        by avoiding object allocation unless needed.
        * src/jacl/tcl/lang/Parser.java (savedVarFrame):
        Save var frame before try block and restore it
        in a finally block so that restoring works
        in the TclException case. This is needed for
        the new Interp.eval() implementation.
        * src/jacl/tcl/lang/TclList.java (index):
        Optimize the TclList.index() method so that
        it does not call setListFromAny() unless needed.
        * tests/tcl/eval.test: Test new eval implementation.

2005-11-20  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Interp.java (createCommand,
        deleteCommandFromToken, renameCommand, hideCommand):
        Increment WrappedCommand epoch when a command is
        renamed or redefined. Also invoke new
        resetShadowedCmdRefs() method to check for a rename
        that shadows another command.
        * src/jacl/tcl/lang/Namespace.java
        (resetShadowedCmdRefs): Port of shadowed command ref
        logic from Tcl 8.4.
        * src/jacl/tcl/lang/WrappedCommand.java: Add a
        cmdEpoch field that is used to see if a ref to
        a WrappedCommand is still valid. When changes to
        a command are made, the command epoch is updated
        to indicate that a held ref is no longer valid.
        * src/tests/jacl/tcl/lang/TestEpoch.java:
        * tests/jacl/refCount.test: Test WrappedCommand.cmdEpoch
        field on command rename and delete.
